src/objects/Standard_Customer_Pay_Plan_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Revise_Due_Date__c</fullName>
        <label>Actual Revise Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_Token_GST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Token GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advance_Demand_Id__c</fullName>
        <label>Advance Demand Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>%/Amount Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>%/Amount</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Basic_Original__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Basic Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <label>Basic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPPH_Name__c</fullName>
        <label>CPPH Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_Installment_Amount_as__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calculate Installment Amount as(%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Comments__c</fullName>
        <label>Call Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charge_Amount_Advance_Recd__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Any advance paid by the customer against this milestone cost</description>
        <label>Installment Amount (Advance Recd)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Amount_Billed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Billed amount for charge type [basic, utilities, infra, legal etc.,]</description>
        <label>Installment Amount (Demanded)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Amount_Due__c</fullName>
        <formula>Charge_Amount_Billed__c -  Charge_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Amount (Balance)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount received from customer against the billed amount</description>
        <label>Installment Amount (Paid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckUpdateStdCustPayPlanDet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckUpdateStdCustPayPlanDet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Stage_Update_Date__c</fullName>
        <label>Construction Stage Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contribution_From__c</fullName>
        <label>Contribution From</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Institution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Pay Plan Header</label>
        <referenceTo>Customer_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
        <relationshipName>Standard_Customer_Pay_Plan_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_0_ServiceTax_Amount__c</fullName>
        <label>Day 0 ServiceTax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Months_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Day/Months Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Months__c</fullName>
        <label>Days/Months</label>
        <picklist>
            <picklistValues>
                <fullName>Day(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deduct_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enter the stage at which token is to be deducted</description>
        <label>Deduct Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demand_Link__c</fullName>
        <formula>IF(!ISBLANK(Milestone_Demand_Id__c), HYPERLINK(&quot;/&quot;&amp; Milestone_Demand_Id__c, &quot;Milestone Demand&quot;),&quot;Not Raised&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demand Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demand_Overdue_Ageing__c</fullName>
        <formula>IF(IsPaymentOverdue__c = TRUE,  (TODAY() -   Payment_Due_Date__c) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demand Overdue Ageing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Charges__c</fullName>
        <label>Development Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dont_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Date on which the demand should be raised for this milestone. Automatically managed by the system based on the  Construction Stages</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_on_Quote__c</fullName>
        <description>Storing the original due date as on the quote for reference</description>
        <label>Due Date (on Quote)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floor_Rise__c</fullName>
        <label>Floor Rise</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Charges__c</fullName>
        <label>Infrastructure Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inst_No__c</fullName>
        <label>Inst No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Number__c</fullName>
        <label>Installment Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Installment Amount</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_Flatcost_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int Flatcost (Paid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_Flatcost_Pending__c</fullName>
        <formula>Int_Flatcost_Total__c -(  Int_Flatcost_Paid__c +  Int_Flatcost_Waived__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Int Flatcost (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_Flatcost_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int Flatcost (Total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_Flatcost_Waived__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int Flatcost (Waived)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_ServiceTax_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int ServiceTax (Paid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_ServiceTax_Pending__c</fullName>
        <formula>Int_ServiceTax_Total__c - (  Int_ServiceTax_Waived__c  +  Int_ServiceTax_Paid__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Int ServiceTax (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_ServiceTax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int ServiceTax (Total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_ServiceTax_Waived__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Int ServiceTax (Waived)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integer_Installment_No__c</fullName>
        <formula>VALUE( Inst_No__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integer Installment No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InterestTest__c</fullName>
        <label>InterestTest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InterestValue__c</fullName>
        <formula>IF(IsPaymentOverdue__c = True,
(Charge_Amount_Due__c+Service_Tax_Amount_Due__c)*Project__r.RDS_Interest_Rate__c/36500*(TODAY()-Payment_Due_Date__c) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InterestValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_OverDue__c</fullName>
        <formula>if( Due_Date__c &lt; TODAY()&amp;&amp;  NOT(IsSendDemandLetter__c) &amp;&amp;  Is_Milestone_Achieved__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice OverDue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Raised_Date__c</fullName>
        <label>Invoice Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsPaymentOverdue__c</fullName>
        <formula>AND((Payment_Due_Date__c &lt;  TODAY()),OR((Charge_Amount_Due__c &gt; 0), (Service_Tax_Amount_Due__c &gt;0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This flag indicates if a payment is overdue.</inlineHelpText>
        <label>IsPaymentOverdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSendDemandLetter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDemandLetterSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Milestone_Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the construction stage is complete</description>
        <label>Is Milestone Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PTP_Partly_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PTP Partly Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Registration_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Registration Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_to_be_Paid__c</fullName>
        <label>Is to be Paid</label>
        <picklist>
            <picklistValues>
                <fullName>Construction Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Dt. of Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Dt. of Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_to_be__c</fullName>
        <label>Is to be Paid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1__c</fullName>
        <label>Reason For Call</label>
        <picklist>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target Calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L2__c</fullName>
        <label>Reason Category</label>
        <picklist>
            <controllingField>L1__c</controllingField>
            <picklistValues>
                <fullName>Grievance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback / General Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Intimation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Date Intimation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Intimation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggestions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Know Your Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appreciation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Contactable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Bank Disbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asked to call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promised to pay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L3__c</fullName>
        <label>Reason Sub Category</label>
        <picklist>
            <controllingField>L2__c</controllingField>
            <picklistValues>
                <fullName>Interest waiver not accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car parks not being alloted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy with RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay in registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs to talk to a senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs to talk to Promoter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised area not acceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wants to resell prior to lock in ending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disputing resale transfer charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mis-selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contemplating Legal Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disputing changes in Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concerns due to media report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old payment not reflecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat issues on possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate invoice request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ledger required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect certificate request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVAT and Stamp duty details required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDS Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs copy of Agreement for Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haven&apos;t received confirmation / Allotment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in correspondance requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in applicant name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale process enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resale NOC request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Call_Disposition__c</fullName>
        <label>Last Call Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Promised to pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asked to call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marked_for_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked for Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Demand_Id__c</fullName>
        <description>Id of demand record that was raised for demanding the payment for this milestone</description>
        <label>Milestone Demand Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Milestone Percentage</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OC_Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OC Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_date__c</fullName>
        <label>On date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Percentage__c</fullName>
        <formula>IF(Standard_Pay_Plan_Header__r.Charge_Code__r.S_Charge_Percentage__c  &lt;&gt; 0,Standard_Pay_Plan_Header__r.Charge_Code__r.S_Charge_Percentage__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTP_Amount__c</fullName>
        <label>PTP Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PTP_Date__c</fullName>
        <label>PTP Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PTP_Instrument__c</fullName>
        <label>PTP Instrument</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PayPlanIID__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PayPlanIID</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pick_up_address__c</fullName>
        <label>Pick up address</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Premium_1__c</fullName>
        <label>Premium 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_2__c</fullName>
        <label>Premium 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_3__c</fullName>
        <label>Premium 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Charge__c</fullName>
        <formula>Standard_Pay_Plan_Header__r.Charge_Code__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Charge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Construction_Stages__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Construction Stages</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Construction_Stages__c.Tower__c</field>
                <operation>equals</operation>
                <valueField>$Source.Tower__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Construction_Stages__c</referenceTo>
        <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
        <relationshipName>Standard_Customer_Pay_Plan_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
        <relationshipName>Standard_Customer_Pay_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raised_Advance_Demand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an advance demand has been raised on this milestone</description>
        <label>Raised Advance Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_deferment__c</fullName>
        <label>Reason for deferment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Linked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Linked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remider_1_Reg_Unit__c</fullName>
        <label>Remider 1 Reg. Unit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remider_1_Un_Reg_Unit__c</fullName>
        <label>Remider 1 Un-Reg. Unit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remider_2_Reg_Unit__c</fullName>
        <label>Remider 2 Reg. Unit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remider_2_Un_Reg_Unit__c</fullName>
        <label>Remider 2 Un-Reg. Unit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revised_Invoice_Date__c</fullName>
        <label>Revised Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ST_On_Basic__c</fullName>
        <label>ST On Basic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ST_On_Development_Charges__c</fullName>
        <label>ST On Development Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ST_On_Floor_Rise__c</fullName>
        <label>ST On Floor Rise</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ST_On_Infrastructure_Charges__c</fullName>
        <label>ST On Infrastructure Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ST_on_Premium_1__c</fullName>
        <label>ST on Premium 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ST_on_Premium_2__c</fullName>
        <label>ST on Premium 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ST_on_Premium_3__c</fullName>
        <label>ST on Premium 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Amount_Advance_Recd__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Any advance recd on service tax for this milestone</description>
        <label>Service Tax Amount (Advance Recd)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Amount_Billed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of service tax for which invoice has been raised</description>
        <label>Service Tax Amount (Demanded)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Amount_Due__c</fullName>
        <formula>Service_Tax_Amount_Billed__c -  Service_Tax_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax Amount (Balance)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount paid against service tax for this milestone</description>
        <label>Service Tax Amount (Paid)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Amount_Q__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax Amount (On Quote)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StageIID__c</fullName>
        <defaultValue>0</defaultValue>
        <label>StageIID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Pay Plan Header</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Standard_Pay_Plan_Header__c.Tower__c</field>
                <operation>equals</operation>
                <valueField>$Source.Tower__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
        <relationshipName>Standard_Customer_Pay_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TDS__c</fullName>
        <label>TDS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Name_1__c</fullName>
        <label>Tax Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Name_2__c</fullName>
        <label>Tax Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Charge_Value_Minus__c</fullName>
        <label>Total Charge Value Minus</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Flat_Cost__c</fullName>
        <formula>Basic__c +  Development_Charges__c +  Floor_Rise__c +  Infrastructure_Charges__c +  Premium_1__c +  Premium_2__c +  Premium_3__c + Premium_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Flat Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Interest_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Interest Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ST__c</fullName>
        <formula>ST_On_Basic__c +  ST_On_Development_Charges__c +  ST_On_Floor_Rise__c +   ST_On_Infrastructure_Charges__c +  ST_on_Premium_1__c +  ST_on_Premium_2__c +  ST_on_Premium_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>